// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile > bindings 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> ", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const x0 = _txt(n0)
  _renderEffect(() => _setText(x0, "count is " + _toDisplayString(_ctx.count) + "."))
  return n0
}"
`;

exports[`compile > custom directive > basic 1`] = `
"import { resolveDirective as _resolveDirective, withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const _directive_test = _resolveDirective("test")
  const _directive_hello = _resolveDirective("hello")
  const n0 = t0()
  _withVaporDirectives(n0, [[_directive_test], [_directive_hello, void 0, void 0, { world: true }]])
  return n0
}"
`;

exports[`compile > custom directive > component 1`] = `
"import { resolveComponent as _resolveComponent, resolveDirective as _resolveDirective, setInsertionState as _setInsertionState, createComponentWithFallback as _createComponentWithFallback, withVaporDirectives as _withVaporDirectives, createIf as _createIf, withVaporCtx as _withVaporCtx, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx) {
  const _component_Bar = _resolveComponent("Bar")
  const _directive_hello = _resolveDirective("hello")
  const _directive_test = _resolveDirective("test")
  const n4 = _createAssetComponent("Comp", null, _withVaporCtx(() => {
    const n0 = _createIf(() => (true), () => {
      const n3 = t0()
      _setInsertionState(n3, null, 0)
      const n2 = _createComponentWithFallback(_component_Bar)
      _withVaporDirectives(n2, [[_directive_hello, void 0, void 0, { world: true }]])
      return n3
    }, null, 17 /* BLOCK_SHAPE, ONCE */)
    return n0
  }), true)
  _withVaporDirectives(n4, [[_directive_test]])
  return n4
}"
`;

exports[`compile > directives > custom directive > basic 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample]])
  return n0
}"
`;

exports[`compile > directives > custom directive > binding value 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample, () => _ctx.msg]])
  return n0
}"
`;

exports[`compile > directives > custom directive > dynamic parameters 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample, () => _ctx.msg, _ctx.foo]])
  return n0
}"
`;

exports[`compile > directives > custom directive > modifiers 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample, () => _ctx.msg, void 0, { bar: true }]])
  return n0
}"
`;

exports[`compile > directives > custom directive > modifiers w/o binding 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample, void 0, void 0, { "foo-bar": true }]])
  return n0
}"
`;

exports[`compile > directives > custom directive > static parameters 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample, () => _ctx.msg, "foo"]])
  return n0
}"
`;

exports[`compile > directives > custom directive > static parameters and modifiers 1`] = `
"import { withVaporDirectives as _withVaporDirectives, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _withVaporDirectives(n0, [[_ctx.vExample, () => _ctx.msg, "foo", { bar: true }]])
  return n0
}"
`;

exports[`compile > directives > v-cloak > basic 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div>test", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compile > directives > v-pre > basic 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div :id=foo><Comp></Comp>{{ bar }}", 3)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  return n0
}"
`;

exports[`compile > directives > v-pre > should not affect siblings after it 1`] = `
"import { setProp as _setProp, renderEffect as _renderEffect, setInsertionState as _setInsertionState, createAssetComponent as _createAssetComponent, child as _child, toDisplayString as _toDisplayString, setText as _setText, template as _template } from 'vue';
const t0 = _template("<div :id=foo><Comp></Comp>{{ bar }}", 2)
const t1 = _template("<div> ")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const n3 = t1()
  const n2 = _child(n3, 1)
  _renderEffect(() => _setProp(n3, "id", _ctx.foo))
  _setInsertionState(n3, 0, 0)
  const n1 = _createAssetComponent("Comp")
  _renderEffect(() => _setText(n2, _toDisplayString(_ctx.bar)))
  return [n0, n3]
}"
`;

exports[`compile > dynamic root 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n0 = t0()
  _setText(n0, _toDisplayString(1) + _toDisplayString(2))
  return n0
}"
`;

exports[`compile > dynamic root nodes and interpolation 1`] = `
"import { txt as _txt, createInvoker as _createInvoker, setProp as _setProp, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<button> ", 1)
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  const x0 = _txt(n0)
  n0.$evtclick = _createInvoker(e => _ctx.handleClick(e))
  _renderEffect(() => {
    const _count = _ctx.count
    _setProp(n0, "id", _count)
    _setText(x0, _toDisplayString(_count) + "foo" + _toDisplayString(_count) + "foo" + _toDisplayString(_count))
  })
  return n0
}"
`;

exports[`compile > execution order > basic 1`] = `
"import { txt as _txt, setProp as _setProp, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> ", 1)

export function render(_ctx) {
  const n0 = t0()
  const x0 = _txt(n0)
  _renderEffect(() => {
    _setProp(n0, "id", _ctx.foo)
    _setText(x0, _toDisplayString(_ctx.bar))
  })
  return n0
}"
`;

exports[`compile > execution order > does not flush later v-for effects before child component 1`] = `
"import { resolveComponent as _resolveComponent, createSelector as _createSelector, child as _child, next as _next, txt as _txt, setInsertionState as _setInsertionState, createComponentWithFallback as _createComponentWithFallback, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<div><span> </span><!><span> ")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const _component_Child = _resolveComponent("Child")
  const _selector0 = _createSelector(() => _ctx.selected)
  const n0 = _createFor(() => (_ctx.rows), (_for_item0) => {
    const n6 = t0()
    const n2 = _child(n6)
    const n5 = _next(n2, 1)
    const n4 = _next(n5, 2)
    const x2 = _txt(n2)
    _setInsertionState(n6, n5, 1)
    const n3 = _createComponentWithFallback(_component_Child)
    const x4 = _txt(n4)
    _renderEffect(() => _setText(x4, _toDisplayString(_ctx.useId())))
    _selector0(_for_item0.value.id, () => {
      _setText(x2, _toDisplayString(_ctx.selected === _for_item0.value.id ? 'danger' : ''))
    })
    return n6
  }, (row) => (row.id), 8)
  n0.onReset(_selector0.reset)
  return n0
}"
`;

exports[`compile > execution order > flushes parent props before creating child component 1`] = `
"import { setProp as _setProp, renderEffect as _renderEffect, setInsertionState as _setInsertionState, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n1 = t0()
  _renderEffect(() => _setProp(n1, "id", _ctx.useId()))
  _setInsertionState(n1, null, 0)
  const n0 = _createAssetComponent("Child")
  return n1
}"
`;

exports[`compile > execution order > flushes previous effects before creating child component 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div> ")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const x0 = _txt(n0)
  _renderEffect(() => _setText(x0, "parent: " + _toDisplayString(_ctx.useId())))
  const n1 = _createAssetComponent("Child")
  return [n0, n1]
}"
`;

exports[`compile > execution order > setInsertionState > next, child and nthChild should be above the setInsertionState 1`] = `
"import { child as _child, next as _next, setInsertionState as _setInsertionState, createAssetComponent as _createAssetComponent, nthChild as _nthChild, createIf as _createIf, setProp as _setProp, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>", 2)
const t1 = _template("<div><div></div><!><div></div><!><div><button>", 1)

export function render(_ctx) {
  const n6 = t1()
  const n5 = _next(_child(n6), 1)
  const n7 = _nthChild(n6, 3)
  const n4 = _child(_next(n7, 4))
  _setInsertionState(n6, n5, 1)
  const n0 = _createAssetComponent("Comp")
  _setInsertionState(n6, n7, 3)
  const n1 = _createIf(() => (true), () => {
    const n3 = t0()
    return n3
  }, null, 17 /* BLOCK_SHAPE, ONCE */)
  _renderEffect(() => _setProp(n4, "disabled", _ctx.foo))
  return n6
}"
`;

exports[`compile > execution order > with insertionState 1`] = `
"import { child as _child, setInsertionState as _setInsertionState, createSlot as _createSlot, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template("<div><div>", 1)

export function render(_ctx) {
  const n3 = t0()
  const n1 = _child(n3)
  _setInsertionState(n1, null, 0)
  const n0 = _createSlot("default")
  _setInsertionState(n3, null, 1)
  const n2 = _createAssetComponent("Comp")
  return n3
}"
`;

exports[`compile > execution order > with v-once 1`] = `
"import { child as _child, next as _next, nthChild as _nthChild, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><span> </span> <br> ", 1)

export function render(_ctx) {
  const n3 = t0()
  const n0 = _child(n3)
  const n1 = _next(n0, 1)
  const n2 = _nthChild(n3, 3)
  const x0 = _txt(n0)
  _setText(x0, _toDisplayString(_ctx.foo))
  _renderEffect(() => {
    _setText(n1, " " + _toDisplayString(_ctx.bar))
    _setText(n2, " " + _toDisplayString(_ctx.baz))
  })
  return n3
}"
`;

exports[`compile > expression parsing > interpolation 1`] = `
"
  const n0 = t0()
  _renderEffect(() => _setText(n0, _toDisplayString(a + b.value)))
  return n0
"
`;

exports[`compile > expression parsing > keeps member selector source offsets after prefixing 1`] = `
"import { createSelector as _createSelector, setClassName as _setClassName, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<tr>")

export function render(_ctx) {
  const _selector0 = _createSelector(() => _ctx.state.selected)
  const n0 = _createFor(() => (_ctx.rows), (_for_item0) => {
    const n2 = t0()
    _selector0(_for_item0.value.id, () => {
      _setClassName(n2, (_for_item0.value.id === _ctx.state.selected ? 1 : 0), "danger")
    })
    return n2
  }, (row) => (row.id), 8)
  n0.onReset(_selector0.reset)
  return n0
}"
`;

exports[`compile > expression parsing > v-bind 1`] = `
"
  const n0 = t0()
  _renderEffect(() => {
    const _key = key.value
    _setDynamicProps(n0, [{ [_key+1]: _unref(foo)[_key+1]() }])
  })
  return n0
"
`;

exports[`compile > expression parsing > v-for 1`] = `
"import { createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx) {
  const n0 = _createFor(() => (_ctx.a.b), (_for_item0, _for_key0, _for_index0) => {
    const n2 = t0()
    return n2
  }, undefined, 8)
  return n0
}"
`;

exports[`compile > expression parsing > v-on multi statements 1`] = `
"import { createInvoker as _createInvoker, delegateEvents as _delegateEvents, template as _template } from 'vue';
const t0 = _template("<div>", 1)
_delegateEvents("click")

export function render(_ctx) {
  const n0 = t0()
  n0.$evtclick = _createInvoker(() => {_ctx.a++;_ctx.b++})
  return n0
}"
`;

exports[`compile > expression parsing > v-slot 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createAssetComponent as _createAssetComponent, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n1 = _createAssetComponent("Comp", null, {
    "foo": (_slotProps0) => {
      const n0 = t0()
      _renderEffect(() => _setText(n0, _toDisplayString(_slotProps0.a + _slotProps0.b)))
      return n0
    }
  }, true)
  return n1
}"
`;

exports[`compile > fragment 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<p>", 2)
const t1 = _template("<span>", 2)
const t2 = _template("<div>", 2)

export function render(_ctx) {
  const n0 = t0()
  const n1 = t1()
  const n2 = t2()
  return [n0, n1, n2]
}"
`;

exports[`compile > gen unique helper alias > should avoid conflicts with existing variable names 1`] = `
"import { txt as _txt2, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> ", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  const x0 = _txt2(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(_ctx.foo)))
  return n0
}"
`;

exports[`compile > gen unique node variables > should avoid binding conflicts for node vars (n*/x*) 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div> ")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n1 = t0()
  const n3 = t0()
  const x1 = _txt(n1)
  const x3 = _txt(n3)
  _renderEffect(() => {
    const _foo = _ctx.foo
    _setText(x1, _toDisplayString(_foo))
    _setText(x3, _toDisplayString(_foo))
  })
  return [n1, n3]
}"
`;

exports[`compile > gen unique node variables > should bump old ref var (r*) on conflict 1`] = `
"import { createTemplateRefSetter as _createTemplateRefSetter, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const _setTemplateRef = _createTemplateRefSetter()
  const n1 = t0()
  const n3 = t0()
  const n4 = t0()
  _renderEffect(() => {
    const _bar = _ctx.bar
    _setTemplateRef(n1, _bar)
    _setTemplateRef(n3, _bar)
    _setTemplateRef(n4, _bar)
  })
  return [n1, n3, n4]
}"
`;

exports[`compile > gen unique node variables > should bump placeholder cursor var (p*) on conflict 1`] = `
"import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><div>x</div><div><span> </div><div><span> ", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n2 = t0()
  let p1 = _next(_child(n2), 1)
  const n0 = _child(p1)
  const n1 = _child((p1 = _next(p1, 2)))
  const x0 = _txt(n0)
  const x1 = _txt(n1)
  _renderEffect(() => {
    const _foo = _ctx.foo
    _setText(x0, _toDisplayString(_foo))
    _setText(x1, _toDisplayString(_foo))
  })
  return n2
}"
`;

exports[`compile > gen unique node variables > should bump template var (t*) on conflict 1`] = `
"import { template as _template } from 'vue';
const t1 = _template("<div>", 2)
const t3 = _template("<span>", 2)
const t4 = _template("<p>", 2)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t1()
  const n1 = t3()
  const n2 = t4()
  return [n0, n1, n2]
}"
`;

exports[`compile > static + dynamic root 1`] = `
"import { toDisplayString as _toDisplayString, setText as _setText, template as _template } from 'vue';
const t0 = _template(" ")

export function render(_ctx) {
  const n0 = t0()
  _setText(n0, _toDisplayString(1) + _toDisplayString(2) + "3" + _toDisplayString(4) + _toDisplayString(5) + "6" + _toDisplayString(7) + _toDisplayString(8) + "9" + 'A' + 'B')
  return n0
}"
`;

exports[`compile > static template 1`] = `
"import { template as _template } from 'vue';
const t0 = _template("<div><p>hello</p><input><span>", 3)

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;
